# staq

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/checkpoints/: concept_qa_celeba_smiling_filtered_shortcuts.pt  concept_qa_celeba_smiling_gender_presentation.pt
artifacts/models/: concept_qa_celeba_attractive.pt  concept_qa_celeba_smiling_filtered_shortcuts_rs16_anneal_lam08.pt  concept_qa_celeba_smiling_filtered_shortcuts_rs16_anneal_lam08_widesens.pt  concept_qa_celeba_smiling_filtered_shortcuts_rs8.pt
artifacts/runs/: baseline_history.json  celeba_attractive_gender_rs16_anneal_lam04_baseline_history.json  celeba_attractive_gender_rs16_anneal_lam04_baseline_vs_lam_0.4_fixed_history_summary.json  celeba_attractive_gender_rs16_anneal_lam04_baseline_vs_lam_0.4_summary_table.json  celeba_attractive_gender_rs16_anneal_lam04_first_query_probe.json  celeba_attractive_gender_rs16_anneal_lam04_lam_0.20_history.json  celeba_attractive_gender_rs16_anneal_lam04_lam_0.40_history.json  celeba_attractive_gender_rs16_anneal_lam04_lam_0.80_history.json  celeba_attractive_gender_rs16_anneal_lam04_lambda_tradeoff_summary.json  celeba_smiling_filtered_shortcuts_baseline_history.json  celeba_smiling_filtered_shortcuts_baseline_vs_lam_0.4_fixed_history_summary.json  (+48 more)
notebooks/: celeba_staq.ipynb  celeba_staq_debug.ipynb  cifar10_staq.ipynb
scripts/: run_replay_analysis.py  train_baseline.py  train_baseline_vip.py  train_concept_qa.py  train_staq.py
staq/: __init__.py  config.py  sensitive_labels.py
staq_research.egg-info/: PKG-INFO  SOURCES.txt
(+43 files in other folders)
